--- a/nextjs-version/my-app/package.json
+++ b/nextjs-version/my-app/package.json
@@ -9,10 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.21",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-github-calendar": "^5.0.4"
+    "react-github-calendar": "^5.0.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
