--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "vitaly-ford-personal-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "framer-motion": "^12.23.26",
     "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
+    "next": "15.5.9",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-github-calendar": "^5.0.4",
