--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,11 @@
-  main = ".open-next/worker.js"
-  name = "vitaly-ford-personal-site"
-  compatibility_date = "2025-12-30"
-  compatibility_flags = ["nodejs_compat"]
-  [assets]
-  directory = ".open-next/assets"
-  binding = "ASSETS"
+main = ".open-next/worker.js"
+name = "vitaly-ford-personal-site"
+compatibility_date = "2025-12-30"
+compatibility_flags = ["nodejs_compat"]
+
+[assets]
+directory = ".open-next/assets"
+binding = "ASSETS"
+
+[vars]
+NEXT_PUBLIC_SCHOLAR_CITATIONS = "721"
