Make booking page an env var

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,3 +9,4 @@ binding = "ASSETS"
 
 [vars]
 NEXT_PUBLIC_SCHOLAR_CITATIONS = "721"
+NEXT_PUBLIC_BOOKING_PAGE = "https://calendar.app.google/aHackGAhEtDC9EAW9"
