--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@ main = ".open-next/worker.js"
 name = "vitaly-ford-personal-site"
 compatibility_date = "2025-12-30"
 compatibility_flags = ["nodejs_compat"]
+keep_vars = true
 
 [assets]
 directory = ".open-next/assets"
