Move NEXT_PUBLIC vars to runtime vars on cloudflare

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,6 @@ keep_vars = true
 directory = ".open-next/assets"
 binding = "ASSETS"
 
-# [vars]
-# NEXT_PUBLIC_SCHOLAR_CITATIONS = "721"
-# NEXT_PUBLIC_BOOKING_PAGE = "https://calendar.app.google/aHackGAhEtDC9EAW9"
+[vars]
+SCHOLAR_CITATIONS = "721"
+BOOKING_PAGE = "https://calendar.app.google/aHackGAhEtDC9EAW9"
